Fix crash when trying to multiselect a shape without a stroke

BUG:378137
Ref T5753